<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="app_name">MAD Todo</string>
    <string name="action_settings">Settings</string>
    <string name="api_root_error">Network error. Invalid API root?\nOffline mode has been automatically enabled.</string>
    <string name="network_error">Could not contact remote server. Changes will be saved locally.</string>
    <string name="response_error">Response error</string>
    <string name="delete_confirm">Delete this task?</string>
    <string name="delete_success">Task has been successfully deleted</string>
    <string name="delete_general_error">Error deleting task</string>
    <string name="delete_invalid_id_error">Invalid remote id</string>    
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="offline_mode_warning">Offline mode is enabled. Changes will be saved locally. Go to settings and set API root to change this.</string>

    <!-- Strings related to create -->    
    <string name="title_activity_create">New Task</string>
    
    <!-- Strings related to details -->
    <string name="title_activity_details">Task Details</string>
    <string name="task_due_text" formatted="false">Due %s at %s</string>
    <string name="task_no_due_text" formatted="false">No due date set</string>
    <string name="task_important_text">Task is important</string>
    <string name="task_not_important_text">Task has normal priority</string>
    <string name="task_done_text">Task was marked as done</string>
    <string name="task_not_done_text">Task is still open</string>
    <string name="details_edit">Edit</string>
    
    <!-- Strings related to edit -->
    <string name="title_activity_edit">Edit Task</string>
    <string name="edit_save">Save</string>
    <string name="edit_delete">Delete</string>
    <string name="edit_success">Task has been successfully saved</string>
    <string name="edit_general_error">Error saving task</string>
    <string name="edit_name_empty_error">Task name cannot be empty</string>

    <!-- Strings related to todo list -->
    <string name="title_activity_list">ListActivity</string>
    <string name="synchronizing">Synchronizing tasks with remote server</string>
    <string name="update_markeddone_error">Error updating task\'s status</string>
    <string name="update_importance_error">Error updating task\'s importance</string>
    <string name="list_create">New</string>
    <string name="list_sync">Sync</string>
    <string name="synchronization_success">Tasks were successfully synchronized with remote server</string>
    
    <!-- Strings related to settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="email">Email</string>
    <string name="email_summary">Email to log into web service.</string>
    <string name="password">Password</string>
    <string name="password_summary">Password to log into web service.</string>
    <string name="api_root">API root</string>
    <string name="api_root_summary">URL of the web service\ne.g. http://192.168.1.191:8080/TodolistWebapp</string>
    <string name="offline_mode">Offline mode</string>
    <string name="offline_mode_summary">Disable login and online synchronization.</string>
    <string name="forget_credentials">Forget credentials</string>
    <string name="forget_credentials_summary">Forget saved login data. You will need to login again.</string>
    
    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="auth_no_email">Email cannot be empty</string>
    <string name="auth_invalid_email"></string>
    <string name="auth_success">Login success</string>
    <string name="auth_failure">Incorrect login credentials</string>
    <string name="auth_network_error">Network error. Invalid API root?\nOffline mode has been automatically enabled.</string>
    <string name="auth_logging_in">Logging in</string>
    <string name="auth_testing_connection">Connecting to web service</string>    
    
</resources>