<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:key="email"
        android:summary="@string/email_summary"
        android:title="@string/email" />
    <EditTextPreference
        android:inputType="textPassword"
        android:key="password"
        android:summary="@string/password_summary"
        android:title="@string/password" />

    <SwitchPreference
        android:key="offlineMode"
        android:summary="@string/offline_mode_summary"
        android:title="@string/offline_mode" />

    <EditTextPreference
        android:key="apiRoot"
        android:summary="@string/api_root_summary"
        android:title="@string/api_root" />

    <Preference
        android:key="forgetCredentials"
        android:summary="@string/forget_credentials_summary"
        android:title="@string/forget_credentials" />

</PreferenceScreen>